--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
+    "build-gh-pages": "vite build --c vite.config.gh-pages.js",
     "preview": "vite preview"
   },
   "repository": {
